--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.log
 *.pot
 *.pyc
+.gitignore
 __pycache__/
 local_settings.py
 db.sqlite3
@@ -95,19 +96,6 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
 # Celery stuff
@@ -119,14 +107,9 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
 env/
-venv/
 ENV/
 env.bak/
-venv.bak/
-phenv/
-.phenv
 
 # Spyder project settings
 .spyderproject
@@ -151,5 +134,3 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
-# End of https://www.toptal.com/developers/gitignore/api/django
