--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,23 @@ certifi==2021.10.8
 charset-normalizer==2.0.8
 dj-database-url==0.5.0
 Django==3.2.9
-django-heroku==0.0.0
+django-admin-honeypot==1.1.0
+django-admin-thumbnails==0.2.7
+django-session-timeout==0.1.0
 docopt==0.6.2
 gunicorn==20.1.0
 idna==3.3
 Pillow==8.4.0
 pipreqs==0.4.11
 psycopg2-binary==2.9.3
+python-decouple==3.8
+python-http-client==3.3.7
 pytz==2021.3
 requests==2.26.0
+sendgrid==6.10.0
+six==1.16.0
 sqlparse==0.4.2
+starkbank-ecdsa==2.2.0
 urllib3==1.26.7
 whitenoise==5.3.0
 yarg==0.1.9
-sendgrid==6.10.0
