anonymous user bug fixed

--- a/struct.env
+++ b/struct.env
@@ -7,7 +7,9 @@ TIME_ZONE=
 EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
-EMAIL_APP_PASSWORD=
 EMAIL_USE_TLS=
 EMAIL_USE_SSL=
+
+SENDGRID_API_KEY=
+TEMP_SENDGRID_USERNAME=
+TEMP_SENDGRID_PASSWORD=
